--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto 3</title>
+    <title>Say No More - Discografía de Charly</title>
+    <meta name="description" content="Descubre la discografía de Charly, sus ranking de canciones, y mucho más en Say No More.">
+    <meta name="keywords" content="Charly, música, amigos, colaboraciones, artista, discografía, anécdotas">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kay+Pho+Du:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
+
+    <meta property="og:title" content="Say No More - Discografía de Charly" />
 </head>
 
 <body>
-    <!--navbar-->
+    <!--navbar/tengo un problema y es que no se visualiza la navbar en mobile y no se como solucionarlo-->
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -78,7 +82,9 @@
         </section>
     </main>
     <footer>
-        <a href="#Titulo"><button class="boton">Say no More</button></a>
+        <p>"Nadie esta capacitado para criticarme"</p>
+        <a href="#Titulo">
+            <button class="boton">Say no More</button></a>
     </footer>
 </body>
 
