--- a/html/amigos.html
+++ b/html/amigos.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Charly y amigos</title>
+    <title>Charly y Amigos - Un viaje musical a través de la vida de Charly</title>
+    <meta name="description" content="Descubre la discografía de Charly, sus ranking de canciones, y mucho más en Say No More.">
+    <meta name="keywords" content="Charly, música, amigos, colaboraciones, artista, discografía, anécdotas">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kay+Pho+Du:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -29,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="./discografia.html">Discografia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./ranking.html">Ranking de canciones</a>
+                            <a class="nav-link" href="./ranking.html">Ranking de Discos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./tiempo.html">Charly atraves del tiempo</a>
@@ -64,13 +66,15 @@
                 <img src="/img/pedro aznar.jpg" alt="Charly y pedro aznar">
             </li>
             <li>
-                <strong>Fito Paez:</strong>Su exesposa y compañera, quien ha influido en su vida personal y artística.
+                <strong>Fito Paez:</strong>Su amigo y compañero, demasiada magia en una fotografia.
                 <img src="/img/Fito paez.jpg" alt="Charly y Fito Paez">
             </li>
         </ol>
     </main>
     <footer>
-        <a href="#Titulo"><button class="boton">Say no More</button></a>
+        <p>"Charly es un antes y despues en la vida"</p>
+        <a href="#Titulo">
+        <button class="boton">Say no More</button></a>
     </footer>
 </body>
 
