--- a/html/ranking.html
+++ b/html/ranking.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking</title>
+    <title>Ranking de exitos de Charly</title>
+    <meta name="description" content="Descubre la discografía de Charly, sus ranking de canciones, y mucho más en Say No More.">
+    <meta name="keywords" content="Charly, música, amigos, colaboraciones, artista, discografía, anécdotas">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kay+Pho+Du:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -29,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="./discografia.html">Discografia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./ranking.html">Ranking de canciones</a>
+                            <a class="nav-link" href="./ranking.html">Ranking de Discos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./tiempo.html">Charly atraves del tiempo</a>
@@ -55,35 +57,35 @@
                 <li>
                     <iframe style="border-radius:12px"
                         src="https://open.spotify.com/embed/album/3OyBf97NOuJjhEpQHY920H?utm_source=generator"
-                        width="100%" height="152" frameBorder="0" allowfullscreen=""
+                        width="70%" height="152" frameBorder="0" allowfullscreen=""
                         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                         loading="lazy"></iframe>
                 </li>
                 <li>
                     <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/album/17utekM9a95MchXbkbh47k?utm_source=generator"
-                        width="100%" height="152" frameBorder="0" allowfullscreen=""
+                        src="https://open.spotify.com/embed/album/17utekM9a95MchXbkbh47k?utm_source=generator&theme=0"
+                        width="70%" height="152" frameBorder="0" allowfullscreen=""
                         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                         loading="lazy"></iframe>
                 </li>
                 <li>
                     <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/album/1oZU9a9rdlLV2AB0OCocTZ?utm_source=generator"
-                        width="100%" height="152" frameBorder="0" allowfullscreen=""
+                        src="https://open.spotify.com/embed/album/1oZU9a9rdlLV2AB0OCocTZ?utm_source=generator&theme=0"
+                        width="70%" height="152" frameBorder="0" allowfullscreen=""
                         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                         loading="lazy"></iframe>
                 </li>
                 <li>
                     <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/album/4MrFVzdNEgxfZbJyC2RQt9?utm_source=generator"
-                        width="100%" height="152" frameBorder="0" allowfullscreen=""
+                        src="https://open.spotify.com/embed/album/4MrFVzdNEgxfZbJyC2RQt9?utm_source=generator&theme=0"
+                        width="70%" height="152" frameBorder="0" allowfullscreen=""
                         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                         loading="lazy"></iframe>
                 </li>
                 <li>
                     <iframe style="border-radius:12px"
-                        src="https://open.spotify.com/embed/album/7150qYQFyVskNOFtw5oCPr?utm_source=generator"
-                        width="100%" height="152" frameBorder="0" allowfullscreen=""
+                        src="https://open.spotify.com/embed/album/7150qYQFyVskNOFtw5oCPr?utm_source=generator&theme=0"
+                        width="70%" height="152" frameBorder="0" allowfullscreen=""
                         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                         loading="lazy"></iframe>
                 </li>
@@ -91,7 +93,9 @@
         </article>
     </main>
     <footer>
-        <a href="#Titulo"><button class="boton">Say no More</button></a>
+        <p>"Yo soy lo que hago"</p>
+        <a href="#Titulo">
+            <button class="boton">Say no More</button></a>
     </footer>
 </body>
 
