--- a/html/tiempo.html
+++ b/html/tiempo.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiempo</title>
+    <title>Charly a Través del Tiempo</title>
+    <meta name="description" content="Descubre la discografía de Charly, sus ranking de canciones, y mucho más en Say No More.">
+    <meta name="keywords" content="Charly, música, amigos, colaboraciones, artista, discografía, anécdotas">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kay+Pho+Du:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -29,7 +31,7 @@
                             <a class="nav-link active" aria-current="page" href="./discografia.html">Discografia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./ranking.html">Ranking de canciones</a>
+                            <a class="nav-link" href="./ranking.html">Ranking de Discos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./tiempo.html">Charly atraves del tiempo</a>
@@ -138,7 +140,9 @@
         </article>
     </main>
     <footer>
-        <a href="#Titulo"><button class="boton">Say no More</button></a>
+        <p>"Vos no sos lindo"</p><!--referencia a una frase de charly garcia en una entrevista-->
+        <a href="#Titulo">
+        <button class="boton">Say no More</button></a>
     </footer>
 </body>
 
